--- a/app.html
+++ b/app.html
@@ -5,57 +5,364 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
-    <script
-      src="https://unpkg.com/htmx.org@1.9.10"
-      integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="./css/app.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <header class="header">
-      <div>
-        <nav
-          data-hx-trigger="load"
-          data-hx-swap="outerHTML"
-          data-hx-get="global.header-nav.partial.html"
-        ></nav>
+      <div class="container">
+        <div class="header-content">
+          <nav class="header__nav">
+            <div class="header__nav-content">
+              <div class="header__nav-logo">
+                <a href="index.html" class="header__logo-link">LOGO</a>
+              </div>
+              <a href="#" class="header__menu-btn">
+                <span class="header__navicon"></span>
+              </a>
+              <div class="header__nav-menu">
+                <div class="header__nav-menu-links">
+                  <ul class="header__nav-list">
+                    <li class="header__nav-list-item">
+                      <a href="bonus.html" class="header__nav-link">
+                        <img
+                          src="img/header/bonuses.png"
+                          alt="Gift icon"
+                          class="header__nav-link-img"
+                        />
+                        BONUSES
+                      </a>
+                    </li>
+                    <li class="header__nav-list-item">
+                      <a href="app.html" class="header__nav-link">
+                        <img
+                          src="img/header/app.png"
+                          alt="Phone icon"
+                          class="header__nav-link-img"
+                        />
+                        APP
+                      </a>
+                    </li>
+                    <li class="header__nav-list-item">
+                      <a href="#contacts" class="header__nav-link">LIVE</a>
+                    </li>
+                    <li class="header__nav-list-item">
+                      <a href="#contacts" class="header__nav-link">SPORTS</a>
+                    </li>
+                    <li class="header__nav-list-item">
+                      <a href="#contacts" class="header__nav-link">MORE</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </nav>
+          <div class="header__toolbar">
+            <div class="header__language">
+              <div class="header__language-select">
+                <div class="header__language-selected">
+                  <img
+                    src="img/header/language/avstriya.png"
+                    alt="flag Austria"
+                    class="header__language-img"
+                  />
+                  <span>AT</span>
+                  <span class="header__language-arrow">▾</span>
+                </div>
+                <ul class="header__language-options">
+                  <li class="header__language-option" data-value="at">
+                    <img
+                      src="img/header/language/avstriya.png"
+                      alt="flag Austria"
+                      class="header__language-img"
+                    />
+                    AT
+                  </li>
+                  <li class="header__language-option" data-value="en">
+                    <img
+                      src="img/header/language/usa.webp"
+                      alt="flag USA"
+                      class="header__language-img"
+                    />
+                    ENG
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="header__contact">
+              <button
+                class="header__contact-button header__contact-button--signup"
+              >
+                SIGN UP
+              </button>
+              <button
+                class="header__contact-button header__contact-button--login"
+              >
+                LOG IN
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
-    <main class="main-app">
-      <section
-        data-hx-trigger="load"
-        data-hx-swap="outerHTML"
-        data-hx-get="app.banner.partial.html"
-      ></section>
-	  <section
-	  data-hx-trigger="load"
-	  data-hx-swap="outerHTML"
-	  data-hx-get="global.welcome.partial.html"
-	></section>
-      <section
-        data-hx-trigger="load"
-        data-hx-swap="outerHTML"
-        data-hx-get="app.download.partial.html"
-      ></section>
-      <section
-        data-hx-trigger="load"
-        data-hx-swap="outerHTML"
-        data-hx-get="global.sports-betting-guide.partial.html"
-      ></section>
-      <section
-        data-hx-trigger="load"
-        data-hx-swap="outerHTML"
-        data-hx-get="global.faq.partial.html"
-      ></section>
-    </main>
+    <div class="layout">
+      <main class="main-app">
+        <section class="banner-app">
+          <div class="container">
+            <div class="banner-app__content">
+              <div class="banner-app__info">
+                <div class="banner-app__buttons">
+                  <a href="index.html">Home | </a>
+                  <a href="bonus.html"> App</a>
+                </div>
+                <h2 class="banner-app__headline">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing
+                </h2>
+                <button class="banner-app__sign-up">Sign Up</button>
+                <p class="banner__rule">18+ T&C apply | Play Responsibly</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="welcome">
+          <div class="container">
+            <div class="welcome__content">
+              <h2 class="welcome__title">WELCOME BONUS</h2>
+              <p class="welcome__description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Consequat egestas eget purus, in dapibus imperdiet quis eget.
+                Curabitur semper volutpat cras elementum. Eget ultrices donec
+                urna tellus duis ullamcorper consequat. Enim nunc neque
+                tristique adipiscing varius sit tristique. Sit parturient eget
+                pharetra, suspendisse. Turpis ut odio lorem sapien congue.
+                Pulvinar id in mollis faucibus ut. Magna in neque tristi
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="download">
+          <div class="container">
+            <div class="download__content">
+              <button class="download__button">Dowload app</button>
+              <div class="download__logo">
+                <a href="index.html" class="download__logo-link">LOGO</a>
+              </div>
+              <div class="download__apps">
+                <img src="img/download/app-store.png" alt="App store icon" />
+                <img
+                  src="img/download/google-play.png"
+                  alt="Google play icon"
+                />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="sports-betting-guide">
+          <div class="container">
+            <div class="sports-betting-guide__content">
+              <div class="sports-betting-guide__block-text">
+                <p class="sports-betting-guide__title">SPORTSBOOK REVIEW</p>
+                <p class="sports-betting-guide__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Consequat egestas eget purus, in dapibus imperdiet quis eget.
+                  Curabitur semper volutpat cras elementum. Eget ultrices donec
+                  urna tellus duis ullamcorper consequat. Enim nunc neque
+                  tristique adipiscing varius sit tristique. Sit parturient eget
+                  pharetra, suspendisse. Turpis ut odio lorem sapien congue.
+                  Pulvinar id in mollis faucibus ut. Magna in neque tristi
+                </p>
+                <p class="sports-betting-guide__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Consequat egestas eget purus, in dapibus imperdiet quis eget.
+                  Curabitur semper volutpat cras elementum. Eget ultrices donec
+                  urna tellus duis ullamcorper consequat. Enim nunc neque
+                  tristique adipiscing varius sit tristique. Sit parturient eget
+                  pharetra, suspendisse. Turpis ut odio lorem sapien congue.
+                  Pulvinar id in mollis faucibus ut. Magna in neque tristi
+                </p>
+              </div>
+              <div class="sports-betting-guide__block-text">
+                <p class="sports-betting-guide__title">LINEUP OF THE SPORTS</p>
+                <p class="sports-betting-guide__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Consequat egestas eget purus, in dapibus imperdiet quis eget.
+                  Curabitur semper volutpat cras elementum. Eget ultrices donec
+                  urna tellus duis ullamcorper consequat. Enim nunc neque
+                  tristique adipiscing varius sit tristique. Sit parturient eget
+                  pharetra, suspendisse. Turpis ut odio lorem sapien congue.
+                  Pulvinar id in mollis faucibus ut. Magna in neque tristi
+                </p>
+              </div>
+              <div class="sports-betting-guide__block-text">
+                <p class="sports-betting-guide__title">BETTING TYPES</p>
+                <p class="sports-betting-guide__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Consequat egestas eget purus, in dapibus imperdiet quis eget.
+                  Curabitur semper volutpat cras elementum. Eget ultrices donec
+                  urna tellus duis ullamcorper consequat. Enim nunc neque
+                  tristique adipiscing varius sit tristique. Sit parturient eget
+                  pharetra, suspendisse. Turpis ut odio lorem sapien congue.
+                  Pulvinar id in mollis faucibus ut. Magna in neque tristi
+                </p>
+              </div>
+              <div class="sports-betting-guide__block-text">
+                <p class="sports-betting-guide__title">LIVE BETTING</p>
+                <ul
+                  class="sports-betting-guide__list sports-betting-guide__list--unordered"
+                >
+                  <li class="sports-betting-guide__item">
+                    <span>-</span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Consequat egestas eget purus, in dapibus imperdiet quis
+                    eget.
+                  </li>
+                  <li class="sports-betting-guide__item">
+                    <span>-</span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </li>
+                  <li class="sports-betting-guide__item">
+                    <span>-</span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Consequat egestas eget purus.
+                  </li>
+                </ul>
+                <ol
+                  class="sports-betting-guide__list sports-betting-guide__list--ordered"
+                >
+                  <li class="sports-betting-guide__item">
+                    <span class="sports-betting-guide__span">1</span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Consequat egestas eget purus, in dapibus imperdiet quis
+                    eget.
+                  </li>
+                  <li class="sports-betting-guide__item">
+                    <span class="sports-betting-guide__span">2</span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </li>
+                  <li class="sports-betting-guide__item">
+                    <span class="sports-betting-guide__span">3</span>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Consequat egestas eget purus.
+                  </li>
+                </ol>
+                <p class="sports-betting-guide__description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Consequat egestas eget purus, in dapibus imperdiet quis eget.
+                  Curabitur semper volutpat cras elementum. Eget ultrices donec
+                  urna tellus duis ullamcorper consequat. Enim nunc neque
+                  tristique adipiscing varius sit tristique. Sit parturient eget
+                  pharetra, suspendisse. Turpis ut odio lorem sapien congue.
+                  Pulvinar id in mollis faucibus ut. Magna in neque tristi
+                </p>
+              </div>
+              <button class="sports-betting-guide__button">Sign UP</button>
+            </div>
+          </div>
+        </section>
+        <section class="faq">
+          <div class="container">
+            <div class="faq__content">
+              <h2 class="faq__title">FAQ</h2>
+              <div class="faq__item">
+                <button class="faq__question" aria-expanded="false">
+                  Question 1
+                  <img
+                    src="img/faq/arrow-up.png"
+                    alt="Arrow up"
+                    class="faq__icon"
+                  />
+                </button>
+                <div class="faq__answer">
+                  <p>
+                    This is Photoshop's version of Lorem Ipsum. Proin gravida
+                    nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
+                    quis bibendum auctor, nisi elit consequat ipsum, nec
+                    sagittis sem nibh id elit. Duis sed odio sit amet nibh
+                    vulputate cursus a sit amet mauris. Morbi accumsan ipsum
+                    velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
+                    Sed non mauris vitae erat consequat auctor eu in elit.
+                  </p>
+                </div>
+              </div>
+              <div class="faq__item">
+                <button class="faq__question" aria-expanded="false">
+                  Question 2
+                  <img
+                    src="img/faq/arrow-up.png"
+                    alt="Arrow up"
+                    class="faq__icon"
+                  />
+                </button>
+                <div class="faq__answer">
+                  <p>
+                    This is Photoshop's version of Lorem Ipsum. Proin gravida
+                    nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
+                    quis bibendum auctor, nisi elit consequat ipsum, nec
+                    sagittis sem nibh id elit. Duis sed odio sit amet nibh
+                    vulputate cursus a sit amet mauris. Morbi accumsan ipsum
+                    velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
+                    Sed non mauris vitae erat consequat auctor eu in elit.
+                  </p>
+                </div>
+              </div>
+              <div class="faq__item">
+                <button class="faq__question" aria-expanded="false">
+                  Question 3
+                  <img
+                    src="img/faq/arrow-up.png"
+                    alt="Arrow up"
+                    class="faq__icon"
+                  />
+                </button>
+                <div class="faq__answer">
+                  <p>
+                    This is Photoshop's version of Lorem Ipsum. Proin gravida
+                    nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
+                    quis bibendum auctor, nisi elit consequat ipsum, nec
+                    sagittis sem nibh id elit. Duis sed odio sit amet nibh
+                    vulputate cursus a sit amet mauris. Morbi accumsan ipsum
+                    velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
+                    Sed non mauris vitae erat consequat auctor eu in elit.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
     <footer class="footer-app">
-      <div
-        data-hx-trigger="load"
-        data-hx-swap="outerHTML"
-        data-hx-get="app.footer.partial.html"
-      ></div>
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__text">
+            <p class="footer__parapraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat
+              egestas eget purus, in dapibus imperdiet quis eget. Curabitur
+              semper volutpat cras elementum. Eget ultrices donec urna tellus
+              duis ullamcorper consequat. Enim nunc neque tristique adipiscing
+              varius sit tristique. Sit parturient eget pharetra, suspendisse.
+              Turpis ut odio lorem sapien congue. Pulvinar id in mollis faucibus
+              ut. Magna in neque tristi
+            </p>
+            <img
+              class="footer__limitation"
+              src="img/footer/limitation.png"
+              alt="18+ icon"
+            />
+          </div>
+          <p class="footer__additon-text">
+            Gambling can be addictive. Play responsibly.
+          </p>
+          <div class="footer__logo-container">
+            <div class="footer__main-logo">
+              <a href="index.html" class="footer__main-link">LOGO</a>
+            </div>
+            <div class="footer__secondary-logo">
+              <a href="index.html" class="footer__secondary-link">LOGO</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
-    <script src="js/app.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
